Fixed the layout issue of product cards

--- a/src/app/home/home.component.scss
+++ b/src/app/home/home.component.scss
@@ -1,22 +1,20 @@
 .container {
-  background-color: rgb(12, 218, 218);
-  margin: 10px 40px 10px 40px;
+  background-color: #fefae0;
+  margin: 40px;
 }
 
 .products {
   display: flex;
   flex-wrap: wrap;
   gap: 40px;
+  justify-content: center;
 }
 
 .product-card {
   display: flex;
   flex-direction: column;
-  flex-grow: 1;
-  flex-basis: 20%;
   box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
   transition: 0.3s;
-  background-color: #fefae0;
 }
 
 .product-card:hover {
@@ -24,7 +22,9 @@
 }
 
 .product-image img {
+  object-fit: cover;
   max-width: 100%;
+  height: 100%;
 }
 
 .product-info {
